import net.minecraftforge.gradle.userdev.tasks.JarJar

plugins {
    id 'net.neoforged.gradle' version '[6.0.18,6.2)'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
}

version = mod_version
group = 'mrthomas20121.gravitation'
archivesBaseName = 'Aether Gravitation'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: mc_version
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            property 'forge.logging.console.level', 'debug'

            mods {
                gravitation {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            property 'forge.logging.console.level', 'debug'

            mods {
                gravitation {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            args '--mod', 'gravitation', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/'), '--existing-mod', 'aether'

            mods {
                gravitation {
                    source sourceSets.main
                }
            }
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven { url = "https://packages.aether-mod.net/The-Aether" }
    maven { url = 'https://maven.minecraftforge.net/' }
    maven {
        name 'Thermal Maven'
        url 'https://maven.covers1624.net/'
    }
    maven { // TOP
        url 'https://maven.tterrag.com/'
    }
    maven { // JEI and Tinkers
        url 'https://dvs1.progwml6.com/files/maven/'
    }
    maven { // Patchouli
        url 'https://maven.blamejared.com/'
    }
    maven { // Curios
        url 'https://maven.theillusivec4.top/'
    }
    maven {
        name "cf"
        url "https://cursemaven.com/"
    }

    maven {
        // Shadows
        url "https://maven.shadowsoffire.dev/releases"
        content {
            includeGroup "dev.shadowsoffire"
        }
    }

    maven {
        name 'ModdingLegacyMaven'
        url 'https://maven.moddinglegacy.com/maven'
    }

    maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }

}

dependencies {
    minecraft "net.neoforged:forge:${mc_version}-${neoforge_version}"

    // compile against the JEI API but do not include it at runtime
    compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
    compileOnly fg.deobf("mezz.jei:jei-${mc_version}-forge-api:${jei_version}")

    // at runtime, use the full JEI
    runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}-common:${jei_version}")
    runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}-forge:${jei_version}")

    // aether
    compileOnly "com.aetherteam.aether:aether:${mc_version}-${aether_version}"
    runtimeOnly fg.deobf("com.aetherteam.aether:aether:${mc_version}-${aether_version}")

    // curio
    implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curio_version}")
    implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curio_version}:api")

    implementation fg.deobf("dev.shadowsoffire:Placebo:${mc_version}-${placeboVersion}")
    implementation fg.deobf("dev.shadowsoffire:ApothicAttributes:${mc_version}-${attributeslibVersion}")

    // terrablender and aeroblender
    implementation fg.deobf("curse.maven:aeroblender-879879:4789008")
    implementation fg.deobf('com.github.glitchfiend:TerraBlender-forge:1.20.1-3.0.1.7')

    implementation fg.deobf("curse.maven:aether-treasure-reforging-1016302:5759738")
    //implementation fg.deobf("com.aetherteam.treasure_reforging:aether_treasure_reforging:${treasure_reforging_version}")
    implementation fg.deobf("com.aetherteam.nitrogen:nitrogen_internals:${nitrogen_version}")
    implementation fg.deobf("com.aetherteam.cumulus:cumulus_menus:${cumulus_version}")

    implementation fg.deobf("slimeknights.mantle:Mantle:${mc_version}-${mantle_version}")

    jarJar fg.deobf("dev.shadowsoffire:Placebo:${mc_version}-${placeboVersion}") {
        jarJar.ranged(it, "[${placeboVersion},)")
        jarJar.pin(it, "${mc_version}-${placeboVersion}")
    }

    jarJar fg.deobf("dev.shadowsoffire:ApothicAttributes:${mc_version}-${attributeslibVersion}") {
        jarJar.ranged(it, "[${attributeslibVersion},)")
        jarJar.pin(it, "${mc_version}-${attributeslibVersion}")
    }

    jarJar fg.deobf("slimeknights.mantle:Mantle:${mc_version}-${mantle_version}") {
        jarJar.ranged(it, "[${mantle_version},)")
        jarJar.pin(it, "${mc_version}-${mantle_version}")
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                "Specification-Title": "Aether Gravitation",
                "Specification-Vendor": "Mrthomas20121",
                "Specification-Version": "1", // We are version 1 of ourselves
                "Implementation-Title": project.name,
                "Implementation-Version": project.version,
                "Implementation-Vendor" : "gravitation",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }

    finalizedBy 'reobfJar'

    archiveClassifier = 'no-embeds'
}

tasks.named('jarJar', JarJar).configure {
    archiveClassifier = ''
}

tasks.jarJar.finalizedBy('reobfJarJar')

build {
    dependsOn 'jarJar'
}